moy des notes avis ok page home ok page listedetails user en cours

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+footer {
+  background-color : #AADCB8;
+}
+
+header {
+  background-color: #A7D5FF;
+}
