--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=Love+Ya+Like+A+Sister');
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+@import url('https://fonts.cdnfonts.com/css/kiddosy-free');
+@import url('https://fonts.cdnfonts.com/css/twiggypop');
+@import url('https://fonts.cdnfonts.com/css/baskerville');
+
+
+
 .App {
   text-align: center;
 }
@@ -41,6 +49,8 @@
 /************************************************************************************************ 
 **************************************GENERALITIES **********************************************
 *************************************************************************************************/
+
+
 * {
   box-sizing:border-box;
   margin:0;
@@ -50,6 +60,7 @@
 
 body {
   margin:0;
+  font-family: 'Baskerville', sans-serif;
 }
 
 footer {
@@ -61,37 +72,23 @@ table, tr, td {
   border:1px solid black;
 }
 
+h1 {
+  font-family: 'Kiddosy Free', sans-serif;
+  color:#62ad76;
+  margin: 1rem 0.5rem;
+  
+}
+
 h2 {
+  font-family: 'TwiggyPop', sans-serif;
   color: #AADCB8;
   text-decoration:underline;
+  margin: 1rem 0.5rem;
 }
 
-.navbar {
-  display:flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  padding:1rem;
-  width:100%;
-  min-height:75px;
-  background-color: #A7D5FF ;
-  color: #AADCB8;
-}
-
-.navbar__links {
-  display: flex;
-}
-
-.navbar__link {
-  padding:0 0.3rem;
-}
-
-.navbar__burger {
-  width:40px;
-  height:40px;
-  background:transparent;
-  border:none;
-  color:inherit;
+h3 {
+  font-family: 'TwiggyPop', sans-serif;
+  margin-bottom:.5rem;
 }
 
 ul{
@@ -102,4 +99,288 @@ ul{
 
 a {
   text-decoration:none;
+}
+
+a:visited {
+  color:#000000;
+}
+
+img {
+  width: 100%;
+}
+
+/****************************** NAVBAR *********************************/
+.navbar {
+  display:flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding:1rem;
+  width:100%;
+  background-color: #A7D5FF ;
+  color: black;
+  font-family: 'TwiggyPop', sans-serif;
+}
+
+.navbar__links {
+  display: flex;
+}
+
+.navbar__link {
+  padding:0 0.3rem;
+  color:inherit;
+}
+
+.navbar__burger {
+  width:40px;
+  height:40px;
+  background:transparent;
+  border:none;
+  color:inherit;
+}
+
+.navbar__logo {
+  position:relative;
+  left:3rem;
+  top:-.7rem;
+  width:50%;
+}
+
+.img-logo {
+  width:50%;
+}
+
+.nav_img_cart {
+  padding:.1rem;
+  width:40%;
+}
+
+.nav_img_profil {
+  width:40%;
+}
+
+.navbar__icons{
+  display:flex;
+  padding-bottom:1rem;
+  width:50%;
+}
+
+
+@media screen and (max-width:780px) {
+  .navbar__links {
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    position:fixed;
+    right:100vh;
+    bottom:0;
+    width:0;
+    height:100vh;
+    padding:2rem;
+    background-color:#f7c1b2;
+    visibility:hidden;
+    transition: all .8s ease-out;
+  }
+  
+  .navbar__link {
+    display:block;
+    padding:1.5rem;
+    font-size:5vw;
+  }
+  
+  .show-nav .navbar__links {
+    right:0;
+    width:100vw;
+    visibility:visible;
+  }
+  
+  /*bonus*/
+  .navbar__item::after {
+    content:"";
+    display:block;
+    margin: 0 auto;
+    width:3vw;
+    height:1px ;
+    background:black;
+  }
+  
+  .navbar__item:last-child::after {
+    display:none;
+  }
+  
+  .navbar__burger {
+    display:block;
+    position:absolute;
+    top:.5rem;
+    left:.5rem;
+  }
+  
+  .navbar__burger:hover {
+    cursor:pointer;
+  }
+  
+  .burger-bar,
+  .burger-bar::before,
+  .burger-bar::after{
+    display:block;
+    width:30px;
+    height:3px;
+    position:relative;
+    border-radius:3px;
+    background:black;
+    transition: all .5s ease-in-out
+  }
+  
+  .burger-bar::before,
+  .burger-bar::after{
+    content:"";
+    position:absolute;
+    left:0;
+  }
+  
+  .burger-bar::before {
+    transform: translateY(-12px);
+  }
+  
+  .burger-bar::after {
+    transform:translateY(12px);
+  }
+  
+  .show-nav .burger-bar {
+    width:0;
+    background:transparent;
+  }
+  
+  .show-nav .burger-bar::before {
+    transform:rotate(45deg);
+  }
+  
+  .show-nav .burger-bar::after {
+    transform:rotate(-45deg);
+  }
+
+}
+/******************************* CARD PRODUCTS ************************************/
+
+.btn-product-qte {
+  width: 20px;
+  height: 20px;
+  border: none;
+  margin: 0.5rem;
+  border-radius: 50%;
+  background: #A7D5FF;
+  color: black;
+  cursor: pointer;
+}
+
+
+
+
+/****************************** MESSAGERIE ADMIN *********************************/
+
+.etat-0 {
+  background-color:#f27171;
+}
+
+.etat-1 {
+  background-color:#80ad82;
+}
+
+
+/******************************** PROFIL USER ************************************/
+
+.profil {
+  margin: 1rem 0.5rem 0.5rem;
+}
+
+.btn-logout {
+  border-radius:20px;
+  padding:5px;
+  margin-left:1rem;
+  padding:.5rem;
+  background-color:#A7D5FF;
+  color:black;
+} 
+
+.btn-logout:hover,
+.btn-update:hover,
+.btn-valid:hover {
+  background:#AADCB8;
+}
+
+.icon-fatrash {
+  padding-top:.5rem;
+}
+
+button {
+  background-color:white;
+  padding:.2rem;
+  margin-top:.5rem;
+  margin-left:.5rem;
+  font-family: 'italiana', sans-serif;
+  font-size:15px;
+  border:1px solid grey;
+  padding:5px;
+
+}
+
+.btn-delete:hover {
+  background:#f27171;
+}
+
+
+/******************************** TABLES ************************************/
+table {
+  margin:1rem;
+}
+
+td {
+  padding:.5rem;
+}
+
+.btn-array {
+  border:none;
+  padding:0;
+  margin:0;
+}
+
+.fatrash {
+  color:red;
+}
+
+
+/******************************** REGISTER ************************************/
+
+form {
+  margin:1rem;
+}
+
+.fields {
+  display:flex;
+}
+
+fieldset {
+  margin-top:1rem;
+}
+
+legend {
+    padding:0 1em;
+    font-family: 'TwiggyPop', sans-serif;
+    font-size:1.5rem;
+    margin-bottom:1rem;
+    color:#a7d5ff;
+    text-shadow: 1px 1px 1px black;
+}
+
+label {
+    Padding: 1rem;
+    width:30%;
+}
+
+.input-register {
+  width:50%;
+  margin-bottom:.5rem;
+  border-radius:10px;
+  border: 1px solid grey;
+  text-align:center;
 }
