page ordersuccess ok crud abonnement ok

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -109,6 +109,10 @@ img {
   width: 25%;
 }
 
+.underline {
+  text-decoration:underline;
+}
+
 /************************************************************************************************ 
 ************************************** MAIN **********************************************
 *************************************************************************************************/
@@ -381,7 +385,7 @@ label {
     width:30%;
 }
 
-.input-register {
+.input-size{
   width:50%;
   margin-bottom:.5rem;
   border-radius:10px;
