--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1079,7 +1079,7 @@ textarea {
 .bee-img {
   position:absolute;
   width:30%;
-  right:-1rem;
+  right:-2rem;
   top:34rem;
   opacity:.8;
 }
@@ -1132,7 +1132,7 @@ textarea {
 
 @media screen and (min-width:768px) {
   .bee-img {
-    top:45rem;
+    top:40rem;
     width:25%;
   }
 }
@@ -1376,6 +1376,26 @@ textarea {
 }
 
 
+/*********************************************************************************************
+************************************    ERROR 404    *****************************************
+**********************************************************************************************/
+
+.error404 {
+  display:flex;
+  flex-direction:column;
+}
+
+.error404 img {
+  width:50%;
+  margin:auto;
+  margin-bottom:2rem;
+}
+
+@media screen and (min-width: 960px) {
+  .error404 img {
+    width:30%;
+  }
+}
 
 /*********************************************************************************************
 **********************************    MENTIONS LEGALES    ************************************
